[gd_scene load_steps=24 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://light.png" type="Texture" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Wall.tres" type="TileSet" id=4]
[ext_resource path="res://lightbox.png" type="Texture" id=5]
[ext_resource path="res://Goal.tscn" type="PackedScene" id=6]
[ext_resource path="res://BigEnemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://World.gd" type="Script" id=8]
[ext_resource path="res://Score.gd" type="Script" id=9]
[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Wall.gd" type="Script" id=11]
[ext_resource path="res://Roboto.tres" type="DynamicFont" id=12]
[ext_resource path="res://GameOver.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 9 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = SubResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.329412, 0.603922, 0.823529, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.329412, 0.603922, 0.823529, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.329412, 0.603922, 0.823529, 1 )

[node name="World" type="Node2D"]
position = Vector2( 309.139, 158.436 )
script = ExtResource( 8 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( -257.024, -103.314 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
modulate = Color( 0.270588, 0.494118, 0.67451, 1 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.6, 0.6 )
smoothing_enabled = true

[node name="Light2D" type="Light2D" parent="Player"]
light_mask = 3
texture = ExtResource( 5 )
texture_scale = 1.51
color = Color( 0.172549, 0.172549, 0.172549, 1 )
energy = 1.16
range_item_cull_mask = 3
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_buffer_size = 2058
shadow_item_cull_mask = 3

[node name="BigEnemy" parent="." instance=ExtResource( 7 )]
position = Vector2( 529.861, 251.564 )

[node name="Enemy" parent="." instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.929412, 0.890196, 0.894118, 1 )
show_behind_parent = true
position = Vector2( 509.777, 271.694 )
scale = Vector2( 100, 50 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Sprite"]
modulate = Color( 0.0392157, 0.0352941, 0.0313726, 1 )
show_behind_parent = true
position = Vector2( 1.45083, 0.380549 )
scale = Vector2( 1.7165, 1.77298 )
texture = ExtResource( 2 )

[node name="Wall" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
collision_use_kinematic = true
collision_friction = 0.5
collision_bounce = 0.35
collision_layer = 7
collision_mask = 7
occluder_light_mask = 3
format = 1
tile_data = PoolIntArray( -524307, 1073741824, 0, -524306, 1073741824, 0, -524305, 1073741824, 0, -524304, 1073741824, 0, -524303, 1073741824, 0, -524302, 1073741824, 0, -524301, 1073741824, 0, -524300, 1073741824, 0, -524299, 1073741824, 0, -524298, 1073741824, 0, -524297, 1073741824, 0, -524296, 1073741824, 0, -524295, 1073741824, 0, -524294, 1073741824, 0, -524293, 1073741824, 0, -524292, 1073741824, 0, -524291, 1073741824, 0, -524290, 1073741824, 0, -524289, 1073741824, 0, -589824, 1073741824, 0, -589823, 1073741824, 0, -589822, 1073741824, 0, -589821, 1073741824, 0, -589820, 1073741824, 0, -589819, 1073741824, 0, -589818, 1073741824, 0, -589817, 1073741824, 0, -589816, 1073741824, 0, -589815, 1073741824, 0, -589814, 1073741824, 0, -589813, 1073741824, 0, -589812, 1073741824, 0, -589811, 1073741824, 0, -589810, 1073741824, 0, -589809, 1073741824, 0, -589808, 1073741824, 0, -589807, 1073741824, 0, -589806, 1073741824, 0, -589805, 1073741824, 0, -589804, 1073741824, 0, -589803, 1073741824, 0, -589802, 1073741824, 0, -589801, 1073741824, 0, -589800, 1073741824, 0, -589799, 1073741824, 0, -589798, 1073741824, 0, -589797, 1073741824, 0, -589796, 1073741824, 0, -589795, 1073741824, 0, -589794, 1073741824, 0, -589793, 1073741824, 0, -589792, 1073741824, 0, -589791, 1073741824, 0, -589790, 1073741824, 0, -589789, 1073741824, 0, -589788, 1073741824, 0, -589787, 1073741824, 0, -589786, 1073741824, 0, -589785, 1073741824, 0, -589784, 1073741824, 0, -589783, 1073741824, 0, -589782, 1073741824, 0, -589781, 1073741824, 0, -589780, 1073741824, 0, -589779, 1073741824, 0, -589778, 1073741824, 0, -589777, 1073741824, 0, -589776, 1073741824, 0, -589775, 1073741824, 0, -589774, 1073741824, 0, -589773, 1073741824, 0, -589772, 1073741824, 0, -589771, 1073741824, 0, -589770, 1073741824, 0, -589769, 1073741824, 0, -589768, 1073741824, 0, -589767, 1073741824, 0, -589766, 1073741824, 0, -589765, 1073741824, 0, -589764, 1073741824, 0, -589763, 1073741824, 0, -589762, 1073741824, 0, -589761, 1073741824, 0, -589760, 1073741824, 0, -589759, 1073741824, 0, -589758, 1073741824, 0, -589757, 1073741824, 0, -589756, 1073741824, 0, -589755, 1073741824, 0, -589754, 1073741824, 0, -589753, 1073741824, 0, -589752, 1073741824, 0, -589751, 1073741824, 0, -589750, 1073741824, 0, -589749, 1073741824, 0, -589748, 1073741824, 0, -589747, 1073741824, 0, -589746, 1073741824, 0, -589745, 1073741824, 0, -589744, 1073741824, 0, -589743, 1073741824, 0, -458771, 1073741824, 0, -524207, 1073741824, 0, -393235, 1073741824, 0, -458671, 1073741824, 0, -327699, 1073741824, 0, -393135, 1073741824, 0, -262163, 1073741824, 0, -327599, 1073741824, 0, -196627, 1073741824, 0, -262063, 1073741824, 0, -131091, 1073741824, 0, -196527, 1073741824, 0, -65555, 1073741824, 0, -130991, 1073741824, 0, -19, 1073741824, 0, -65455, 1073741824, 0, 65517, 1073741824, 0, 81, 1073741824, 0, 131053, 1073741824, 0, 65617, 1073741824, 0, 196589, 1073741824, 0, 131153, 1073741824, 0, 262125, 1073741824, 0, 196689, 1073741824, 0, 327661, 1073741824, 0, 262225, 1073741824, 0, 393197, 1073741824, 0, 327761, 1073741824, 0, 458733, 1073741824, 0, 393297, 1073741824, 0, 524269, 1073741824, 0, 458833, 1073741824, 0, 589805, 1073741824, 0, 524369, 1073741824, 0, 655341, 1073741824, 0, 589905, 1073741824, 0, 720877, 1073741824, 0, 655441, 1073741824, 0, 786413, 1073741824, 0, 720977, 1073741824, 0, 851949, 1073741824, 0, 786513, 1073741824, 0, 917485, 1073741824, 0, 852049, 1073741824, 0, 983021, 1073741824, 0, 917585, 1073741824, 0, 1048557, 1073741824, 0, 983121, 1073741824, 0, 1114093, 1073741824, 0, 1048657, 1073741824, 0, 1179629, 1073741824, 0, 1114193, 1073741824, 0, 1245165, 1073741824, 0, 1179729, 1073741824, 0, 1310701, 1073741824, 0, 1245265, 1073741824, 0, 1376237, 1073741824, 0, 1310801, 1073741824, 0, 1441773, 1073741824, 0, 1376337, 1073741824, 0, 1507309, 1073741824, 0, 1441873, 1073741824, 0, 1572845, 1073741824, 0, 1507409, 1073741824, 0, 1638381, 1073741824, 0, 1572945, 1073741824, 0, 1703917, 1073741824, 0, 1638481, 1073741824, 0, 1769453, 1073741824, 0, 1704017, 1073741824, 0, 1834989, 1073741824, 0, 1769553, 1073741824, 0, 1900525, 1073741824, 0, 1835089, 1073741824, 0, 1966061, 1073741824, 0, 1900625, 1073741824, 0, 2031597, 1073741824, 0, 1966161, 1073741824, 0, 2097133, 1073741824, 0, 2031697, 1073741824, 0, 2162669, 1073741824, 0, 2097233, 1073741824, 0, 2228205, 1073741824, 0, 2162769, 1073741824, 0, 2293741, 1073741824, 0, 2228305, 1073741824, 0, 2359277, 1073741824, 0, 2293841, 1073741824, 0, 2424813, 1073741824, 0, 2359377, 1073741824, 0, 2490349, 1073741824, 0, 2424913, 1073741824, 0, 2555885, 1073741824, 0, 2490449, 1073741824, 0, 2621421, 1073741824, 0, 2555985, 1073741824, 0, 2686957, 1073741824, 0, 2621521, 1073741824, 0, 2752493, 1073741824, 0, 2752494, 1073741824, 0, 2752495, 1073741824, 0, 2752496, 1073741824, 0, 2752497, 1073741824, 0, 2752498, 1073741824, 0, 2752499, 1073741824, 0, 2752500, 1073741824, 0, 2752501, 1073741824, 0, 2752502, 1073741824, 0, 2752503, 1073741824, 0, 2752504, 1073741824, 0, 2752505, 1073741824, 0, 2752506, 1073741824, 0, 2752507, 1073741824, 0, 2752508, 1073741824, 0, 2752509, 1073741824, 0, 2752510, 1073741824, 0, 2752511, 1073741824, 0, 2686976, 1073741824, 0, 2686977, 1073741824, 0, 2686978, 1073741824, 0, 2686979, 1073741824, 0, 2686980, 1073741824, 0, 2686981, 1073741824, 0, 2686982, 0, 0, 2686983, 0, 0, 2686984, 0, 0, 2686985, 0, 0, 2686986, 0, 0, 2686987, 0, 0, 2686988, 0, 0, 2686989, 0, 0, 2686990, 0, 0, 2686991, 0, 0, 2686992, 0, 0, 2686993, 0, 0, 2686994, 0, 0, 2686995, 0, 0, 2686996, 0, 0, 2686997, 0, 0, 2686998, 0, 0, 2686999, 1073741824, 0, 2687000, 1073741824, 0, 2687001, 1073741824, 0, 2687002, 1073741824, 0, 2687003, 1073741824, 0, 2687004, 1073741824, 0, 2687005, 0, 0, 2687006, 0, 0, 2687007, 0, 0, 2687008, 0, 0, 2687009, 0, 0, 2687010, 0, 0, 2687011, 0, 0, 2687012, 0, 0, 2687013, 0, 0, 2687014, 0, 0, 2687015, 0, 0, 2687016, 0, 0, 2687017, 0, 0, 2687018, 0, 0, 2687019, 0, 0, 2687020, 0, 0, 2687021, 0, 0, 2687022, 0, 0, 2687023, 0, 0, 2687024, 0, 0, 2687025, 0, 0, 2687026, 1073741824, 0, 2687027, 1073741824, 0, 2687028, 1073741824, 0, 2687029, 1073741824, 0, 2687030, 1073741824, 0, 2687031, 1073741824, 0, 2687032, 1073741824, 0, 2687033, 1073741824, 0, 2687034, 1073741824, 0, 2687035, 1073741824, 0, 2687036, 1073741824, 0, 2687037, 1073741824, 0, 2687038, 1073741824, 0, 2687039, 1073741824, 0, 2687040, 1073741824, 0, 2687041, 1073741824, 0, 2687042, 1073741824, 0, 2687043, 1073741824, 0, 2687044, 1073741824, 0, 2687045, 1073741824, 0, 2687046, 1073741824, 0, 2687047, 1073741824, 0, 2687048, 1073741824, 0, 2687049, 1073741824, 0, 2687050, 1073741824, 0, 2687051, 1073741824, 0, 2687052, 1073741824, 0, 2687053, 0, 0, 2687054, 0, 0, 2687055, 1073741824, 0, 2687056, 1073741824, 0, 2687057, 1073741824, 0 )
script = ExtResource( 11 )

[node name="Goal" parent="." instance=ExtResource( 6 )]
position = Vector2( 1271.86, 632.564 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.35
autostart = true

[node name="BigEnemyTimer" type="Timer" parent="."]
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="CanvasLayer"]
margin_left = 943.0
margin_top = 4.0
margin_right = 1151.0
margin_bottom = 64.0
theme = SubResource( 4 )
text = "0000"
script = ExtResource( 9 )

[node name="GameOver" type="CanvasLayer" parent="CanvasLayer"]
pause_mode = 2
visible = false
script = ExtResource( 13 )

[node name="BG" type="ColorRect" parent="CanvasLayer/GameOver"]
margin_left = 395.0
margin_top = 211.0
margin_right = 435.0
margin_bottom = 251.0
rect_scale = Vector2( 5.68661, 4.72034 )
color = Color( 0.0588235, 0.0588235, 0.0588235, 0.835294 )

[node name="ScoreText" type="RichTextLabel" parent="CanvasLayer/GameOver"]
margin_left = 400.0
margin_top = 224.0
margin_right = 620.0
margin_bottom = 368.0
custom_fonts/normal_font = ExtResource( 12 )
text = "Game over! 

Your score was "
fit_content_height = true

[node name="Score" type="RichTextLabel" parent="CanvasLayer/GameOver"]
margin_left = 559.0
margin_top = 281.0
margin_right = 599.0
margin_bottom = 321.0
custom_fonts/normal_font = ExtResource( 12 )
text = "0"

[node name="Text" type="RichTextLabel" parent="CanvasLayer/GameOver"]
margin_left = 402.0
margin_top = 333.0
margin_right = 602.0
margin_bottom = 373.0
custom_fonts/normal_font = SubResource( 6 )
text = "Enter your name for the leaderboard!"
scroll_active = false

[node name="PlayerName" type="TextEdit" parent="CanvasLayer/GameOver"]
margin_left = 401.0
margin_top = 351.0
margin_right = 571.0
margin_bottom = 391.0
custom_fonts/font = SubResource( 10 )

[node name="Enter" type="Button" parent="CanvasLayer/GameOver"]
margin_left = 574.0
margin_top = 351.0
margin_right = 614.0
margin_bottom = 391.0
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
text = "Go"

[connection signal="body_entered" from="Player/Area2D" to="Player" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="BigEnemyTimer" to="." method="_on_BigEnemyTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/GameOver/Enter" to="CanvasLayer/GameOver" method="_on_Enter_pressed"]
